2011-01-07  John W. Eaton  <jwe@octave.org>

	* general/private/__isequal__.m: Compare objects as if they are
	structures.  Bug #32071.

2011-01-07  John W. Eaton  <jwe@octave.org>

	* linear-algebra/logm.m: Style fixes.

2011-01-06  John W. Eaton  <jwe@octave.org>

	* optimization/optimset.m: Remove "i" option from call to
	lookup.  Bug #31392.

2011-01-05  Rik  <octave@nomad.inbox5.com>

	* general/isa.m: Add tests against logical values.

2011-01-04  Rik  <octave@nomad.inbox5.com>

	* testfun/demo.m: Add newline to error output for better formatting.

2011-01-03  Rik  <octave@nomad.inbox5.com>

	* statistics/base/center.m, statistics/base/corrcoef.m,
	statistics/base/kendall.m, statistics/base/mean.m,
	statistics/base/meansq.m, statistics/base/skewness.m,
	statistics/base/studentize.m, statistics/base/var.m,
	statistics/base/run_count.m, statistics/base/ranks.m: Improve input
	validation.  Add function tests.  Improve docstring.

	* statistics/base/moment.m, statistics/base/prctile.m,
	statistics/base/spearman.m, statistics/base/std.m : Improve input
	validation.  Add input validation tests.  Improve docstring.

	* statistics/base/cloglog.m: Add function tests.

	* statistics/base/cor.m: Replace with call to corrcoef, now only an
	alias.

	* statistics/base/cov.m: Add normalization option.  Improve input
	validation.  Add function tests.  Improve docstring.

	* statistics/base/cut.m: Use lowercase variable names.  Improve
	docstring.

	* statistics/base/histc.m, statistics/base/median.m: Use same variable
	name in documentation and in function.  Add input validation tests.
	Improve docstring.

	* statistics/base/iqr.m, statistics/base/mode.m: Add input validation
	tests.  Improve docstring.

	* statistics/base/kurtosis.m: Return same class as input variable.  Add
	input validation tests.  Improve docstring.


	* statistics/base/logit.m, statistics/base/range.m: Add function tests.
	Improve docstring.
